<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_end_color"
        tools:context=".ui.activity.DashBoardActivity">

        <!-- Top Action Bar -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="@dimen/_4sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back_button_desc"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"

                android:text="@string/app_qr"
                android:textColor="@color/logo_color"
                android:textSize="@dimen/_18ssp" />

        </LinearLayout>

        <!-- Scrollable Content -->
        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp">

                <!-- Card View for QR Code -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">
                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/epay_logo"
                            android:layout_gravity="center_horizontal"/>
                        <!-- Title -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:text="@string/scan_qr_to_pay"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16ssp" />

                        <!-- QR Code Image -->
                        <ImageView
                            android:id="@+id/qrCodeImageView"
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="@dimen/_200sdp"
                            android:visibility="visible"

                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/qr_code_desc" />

                        <!-- Instructions -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"
                            android:paddingTop="@dimen/_12sdp"
                            android:text="@string/scan_to_pay"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:gravity="center">
                            <View
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_1sdp"
                                android:background="@color/logo_color"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Or"
                                android:textColor="@color/logo_color"
                                android:paddingHorizontal="@dimen/_10sdp"/>
                            <View
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_1sdp"
                                android:background="@color/logo_color"/>
                        </LinearLayout>
                        <EditText
                            android:id="@+id/et_uri"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@color/gray"
                            android:textColor="@color/black"
                            android:hint="UPI LINK"
                            android:imeOptions="actionDone"
                            android:padding="@dimen/_10sdp"
                            android:inputType="textUri"/>
                        <TextView
                            android:id="@+id/tv_upilink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center"
                            android:paddingTop="@dimen/_12sdp"
                            android:text="Click here to pay"
                            android:textColor="@color/blue2"
                            android:textSize="@dimen/_14ssp" />

                         <TextView
                            android:id="@+id/tv_refresh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:gravity="center"
                            android:paddingTop="@dimen/_12sdp"
                            android:text="Click here to refresh"
                            android:textColor="@color/zxing_result_view"
                            android:textSize="@dimen/_14ssp" />



                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/text_with_icon_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView2"
                    app:layout_constraintStart_toStartOf="@+id/cardView2"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2">

                    <!-- TextView to show the text -->
                    <TextView
                        android:id="@+id/tv_upi_id_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:text=""
                        android:textColor="@color/logo_color"
                        android:textSize="16sp" />

                    <!-- Icon for copying text -->
                    <ImageView
                        android:id="@+id/icon_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="Copy Text"
                        android:padding="4dp"
                        android:src="@drawable/ic_copy" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <!-- Floating Action Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/blue2"
            android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <!-- Share FAB -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/blue2"
            android:src="@drawable/baseline_share_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_menu"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Download FAB -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/blue2"
            android:src="@drawable/download"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/fab_share"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>